# CMP400-Project

./: .gitmodules  CMakeLists.txt  README.md
data/: README.md
data/GTX1050Ti/: README.md
data/GTX1050Ti/Orbit Noise/: README.md  SpatialFar.csv  SpatialFarNoScene.csv  SpatialNoBSM.csv  SpatialNoBSMNoScene.csv  SpatialNoScene.csv  SpatialNoShadows.csv  SpatialNoShadowsNoScene.csv  SpatialNoSpectral.csv  SpatialNoSpectralNoScene.csv  SpatialNoUpscale.csv  SpatialNoUpscaleNoScene.csv  SpatialStandard.csv
data/GTX1050Ti/Resolution Stability/: ResolutionNoUpscale.csv  ResolutionStandard.csv
data/GTX1050Ti/Sample Convergence/: FarConvergence.csv  NoBSMConvergence.csv  NoShadowsConvergence.csv  (+3 more)
include/Data/: Defs.h  EnvironmentArgs.h
include/Rendering/: Canvas.h  D3DCore.h  DisplayDevice.h  RDevice.h  Texture2DResource.h
include/Window/: HaboobWindow.h
scripts/: ExportScripts.cmake  InstallPy.bat  README.md  TestCases.cmake  blank.bat
scripts/Analysis/: ConvergenceAndLatencyWithSamples.R  ConvergenceWithSamples.R  LatencyWithResolution.R  LatencyWithSamples.R  NoiseOverOrbit.R  OrbitErrorNoBSM.txt  OrbitErrorNoShadowsNoScene.txt  OrbitErrorNoSpectral.txt  PairedSignedRank.R  SimpleLatencyHistogram.R
scripts/Exports/: AppendCSV.py  Capture.bat  DenoiseProcedure.bat  GroundTruthProcedure.bat  PyCompareToolApp.py  PyDenoiseToolApp.py  ResolutionScalabilityProcedure.bat  SampleConvergenceProcedure.bat  SimpleProfileProcedure.bat  SpatialStabilityProcedure.bat  TemporalStabilityProcedure.bat  TestArgs.bat  TestProfile1.bat  TestProfileMultiple.bat
shaders/: .gitignore  Shaders.cmake
shaders/Lighting/: DeferredLightPass.cs  GBuffer.lib  LightCommon.lib  LightStructs.lib  ToneMap.cs
shaders/Procedural/: NoiseTextures.lib  Perlin.lib  TEA.lib  Voronoi.lib  World.lib  fBM.lib
shaders/Raster/: DeferredMeshShaderP.ps  DeferredMeshShaderV.vs
shaders/Raymarch/: BackFacingRayVisibility.ps  BeerShadowMarchVolume.cs  FrontFacingRayVisibility.ps  MarchVolume.cs  MarchVolumeMacros.lib  MirrorMarchTexture.cs  MirrorMarchTexture.ps  RaymarchCommon.lib
shaders/TestShaders/: GParticles.ps  MeshCommon.lib  MeshShaderP.ps  MeshShaderV.vs  TestComputeScreenDraw.cs  TestFormHaboob.cs  TestHeader.lib  TestVertex.vs
shaders/Utility/: Globals.lib  MeshCommon.lib  OverdrawTexture.ps  ScreenQuad.vs
src/: Program.cpp
src/Data/: EnvironmentArgs.cpp
src/Rendering/: DisplayDevice.cpp  RDevice.cpp  ScreenGrab11.cpp  Texture2DResource.cpp
src/Testing/: Tests.cpp
src/Window/: HaboobWindow.cpp
(+64 files in other folders)
